--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "~3.0.0rc4",
     "ejs": "~0.8.3",
-    "jade": "~0.27.4"
+    "jade": "~0.27.4",
+    "socket.io": "~0.9.10"
   }
 }
