--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~3.0.0rc4",
     "ejs": "~0.8.3",
     "jade": "~0.27.4",
-    "socket.io": "~0.9.10"
+    "socket.io": "~0.9.10",
+    "mongodb": "~1.1.11"
   }
 }
